NMS-14855: fixed issues with integration test failing because immutable list added dutin policy and detector instantiation